--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo_dynalist_v3.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script>window.Laravel = {csrfToken: '{{ csrf_token() }}'}</script>
     <meta
       name="description"
       content="Web site created using create-react-app"
