--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 <!--    &lt;!&ndash; google font &ndash;&gt;-->
 <!--    <link href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,400,500,600,700,800,900" rel="stylesheet">-->
 
-    <title>React App</title>
+    <title>Dynalist</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -115,6 +115,8 @@
 
       <!-- Custom JavaScript -->
       <script src="%PUBLIC_URL%/js/custom.js"></script>
+
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 
   </body>
